# Web3bridge-Rust-Masterclass-Cohort-I

./: .gitignore
.wake/extension/: local-local-chain-098510da-5fd3-4bf0-88fa-c31911f2e57f.json
live-session/week-6/soroban-hello-world/: .gitignore
submissions/week-1/day-1/sunday-solomon/: Cargo.toml
submissions/week-1/day-2/Wilfred_Adzer_Basic_Arithmetics_In_Rust/: Cargo.toml
submissions/week-1/day-2/basic-arithmetic/: summary.md
submissions/week-1/day-2/ekoja-cheto/: .gitignore  Cargo.toml  summary.md
submissions/week-1/day-2/test-test/: Cargo.toml
submissions/week-1/day-4/sandra-week1-day-4-task-1/: Cargo.toml
submissions/week-1/day-4/sandra-week1-day-4-task-2/: Cargo.toml
submissions/week-2/day-1/Ayoola-Oluwafemi/: Cargo.toml
submissions/week-2/day-2/Sandra-Class-Management-System/: .gitignore
submissions/week-2/day-2/Wilfred_Adzer_Students_management_System/: Cargo.toml
submissions/week-2/day-3/Wilfred_Adzer_Web3_Bridge_Staff_Access_Control/: Cargo.toml
submissions/week-4/Alade-Jamiu/: Task-node.md  Task-stylus-js.md  Task-stylus-zig.md
submissions/week-4/Ebele-Lynda-Okolo/: Stylus-Js.md  Stylus-zig.md
submissions/week-4/Owoloko-Jeffrey/: Task-stylus-js.md  Task-stylus-zig.md
submissions/week-5/: Alade-Jamiu.md
submissions/week-5/Alade-Jamiu/: Tasks-ERC-20.md  Tasks-ERC-6909.md  Tasks-ReentrancyGuard.md  Tasks-String.md
submissions/week-5/oladele/: submission.txt
submissions/week-6/day-3/Wilfred_sep41/soroban-sep41/: Cargo.toml
submissions/week-6/day-3/Wilfred_sep41/soroban-sep41/contracts/hello-world/: Cargo.toml
submissions/week-6/day-3/Wilfred_sep41/soroban-sep41/contracts/hello-world/src/: contract.rs  event.rs  interface.rs  lib.rs  metadata.rs  storage.rs
submissions/week-6/day-3/Wilfred_sep41/soroban-sep41/contracts/sep41-token/: Cargo.toml
submissions/week-6/day-3/Wilfred_sep41/soroban-sep41/contracts/sep41-token/src/: admin.rs  error.rs
submissions/week-6/day-4/Ema/: task.rs
submissions/week-6/day-4/Idolor-Godswill/sep41-token/: Cargo.toml
submissions/week-6/day-4/Idolor-Godswill/sep41-token/examples/: deploy.rs
submissions/week-6/day-4/Idolor-Godswill/sep41-token/src/: admin.rs  contract.rs  error.rs  events.rs  interface.rs  lib.rs  metadata.rs  storage.rs
submissions/week-6/day-4/Idolor-Godswill/sep41-token/tests/: test_admin.rs  test_allowances.rs  test_basic.rs  test_edge_cases.rs
submissions/week-7/day-1/Alade-Jamiu/employee_management/contracts/employee-management/: Cargo.toml
submissions/week-7/day-1/Alade-Jamiu/employee_management/contracts/employee-management/src/: contract.rs
submissions/week-7/day-1/Alade-Jamiu/employee_management/contracts/employee-management/tests/: integration.rs
submissions/week-7/day-1/Emmanuel-Paul/contracts/employee_manager/: Cargo.toml
submissions/week-7/day-1/Emmanuel-Paul/contracts/employee_manager/src/: employee.rs  errors.rs  events.rs  lib.rs  storage.rs
submissions/week-7/day-1/Godswill/contracts/employee-management/: Cargo.toml
submissions/week-7/day-1/Godswill/contracts/employee-management/src/: lib.rs  test.rs
tasks/week-1/: Day-5-task-1 & 2.md
tasks/week-2/: Group-Project-1-24.markdown
tasks/week-5/: Tasks-ERC-20.md  Tasks-String.md
(+286 files in other folders)
