[workspace]
resolver = "2"
members = [
  "contracts/sep41-token",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true

# # Add this to your workspace root Cargo.toml
# [patch.crates-io]
# sha2 = "=0.10.8"


# [workspace]
# resolver = "2"
# members = [
# "contracts/*",
# ]

# [workspace.dependencies]
# soroban-sdk = "22.0.0"

# [profile.release]
# opt-level = "z"
# overflow-checks = true
# debug = 0
# strip = "symbols"
# debug-assertions = false
# panic = "abort"
# codegen-units = 1
# lto = true

# [profile.release-with-logs]
# inherits = "release"
# debug-assertions = true

# # Correct replace syntax - no version requirement symbols
# [replace]
# "sha2:0.10.9" = { version = "0.10.6", default-features = false, features = ["std"] }