[package]
name = "employee_manager"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
sep-41 = { path = "../sep-41" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
